frontend <> edited insta logo in footer

--- a/frontend/src/components/nav/index.css
+++ b/frontend/src/components/nav/index.css
@@ -6,7 +6,7 @@
 .nav{
     justify-content: space-between;
     align-items: center;
-    background-color: #D6C8B9;
+    background-color: #DCD0C3;
     padding: 10px 70px;
 }
 
