frontend <> created card component

--- a/frontend/src/components/infoCard/index.css
+++ b/frontend/src/components/infoCard/index.css
@@ -1,4 +1,4 @@
-.card-icon{
+/* .card-icon{
     width: 50px;
     height: 50px;
 }
@@ -8,8 +8,25 @@
 }
 .card-description{
     font-size: 13px;
+    width: 200px;
+    text-align: center;
 }
 
 .card{
+    width: 20vw;
+    height:45vh;
     align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: #DCD0C3;
+    padding: 20px 10px;
+    border-radius: 25px;
+    box-shadow: 0 0 10px 5px #B2A89E;
 }
+
+.cards-container{
+    gap: 10px;
+    padding: 10px 70px;
+    justify-content: space-between;
+    background-color: #DCD0C3;
+} */
