frontend <> created css for card component

--- a/frontend/src/components/infoCard/index.css
+++ b/frontend/src/components/infoCard/index.css
@@ -1,4 +1,4 @@
-/* .card-icon{
+ .card-icon{
     width: 50px;
     height: 50px;
 }
@@ -20,10 +20,10 @@
     gap: 10px;
     background-color: #DCD0C3;
     padding: 20px 10px;
-    border-radius: 25px;
-    box-shadow: 0 0 10px 5px #B2A89E;
+    /* border-radius: 25px;
+    box-shadow: 0 0 10px 5px #B2A89E; */
 }
-
+/*
 .cards-container{
     gap: 10px;
     padding: 10px 70px;
