--- a/frontend/src/components/infoCard/index.css
+++ b/frontend/src/components/infoCard/index.css
@@ -1,6 +1,6 @@
  .card-icon{
-    width: 50px;
-    height: 50px;
+    width: 30%;
+    height: 25%;
 }
 .card-title{
     font-size: 15px;
@@ -8,16 +8,17 @@
 }
 .card-description{
     font-size: 13px;
-    width: 200px;
+    max-width: 100%;
+    word-wrap: break-word;
     text-align: center;
 }
 
 .card{
     width: 20vw;
-    height:45vh;
+    height:25vw;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
     background-color: #DCD0C3;
     padding: 20px 10px;
     border-radius: 25px;
