--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,3 +11,10 @@
     flex-direction: column;
 }
 
+.box-shadow{
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+}
+
+.main-color{
+    background-color: #DCD0C3;
+}
