--- a/frontend/src/components/nav/index.css
+++ b/frontend/src/components/nav/index.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 70px;
+    border-bottom: 5px solid #333;
 }
 
 .gap{
