--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -47,3 +47,27 @@
 .about-container{
     text-align: center;
 }
+
+/* button animation */
+.get-started-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(220, 208, 195, 0) 0%, rgba(220, 208, 195, 0.2) 50%, rgba(220, 208, 195, 0.2) 100%);
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s ease;
+  }
+  
+  .get-started-btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px rgb(220, 208, 195, 0.5);
+  }
+  
+  .get-started-btn:hover::before {
+    transform: scaleX(1);
+  }
+  
