--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -18,6 +18,7 @@
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease-in-out;
     border:none;
+    font-size: 25px;
 }
 
 
@@ -58,7 +59,7 @@
     height: 100%;
     background: radial-gradient(circle, rgba(220, 208, 195, 0) 0%, rgba(220, 208, 195, 0.2) 50%, rgba(220, 208, 195, 0.2) 100%);
     transform: scaleX(0);
-    transform-origin: center;
+    transform-origin: left;
     transition: transform 0.3s ease;
   }
   
