--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -32,6 +32,7 @@
     z-index: 1;
     line-height: 1.5;
     padding: 10px;
+    font-size: 22px;
   }
   
   .blur-background {
@@ -71,4 +72,14 @@
   .get-started-btn:hover::before {
     transform: scaleX(1);
   }
+
+  
+.cards-container{
+    gap: 10px;
+    padding: 40px 70px;
+    justify-content: center;
+    align-items: center;
+    background-color: #DCD0C3;
+    flex-wrap: wrap;
+}
   
