--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -33,6 +33,9 @@
     line-height: 1.5;
     padding: 10px;
     font-size: 22px;
+    width: 100%;
+    height: 100%;
+    word-wrap: break-word;
   }
   
   .blur-background {
@@ -73,13 +76,26 @@
     transform: scaleX(1);
   }
 
-  
-.cards-container{
-    gap: 10px;
+  .features{
     padding: 40px 70px;
+    background-color: #DCD0C3;
+    align-items: center;
+    gap: 20px;
+  }
+.cards-container{
+    gap: 15px;
     justify-content: center;
     align-items: center;
-    background-color: #DCD0C3;
     flex-wrap: wrap;
 }
   
+.features-section-title{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.features-section-subtitle{
+    font-size: 15px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
