--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -7,6 +7,7 @@
     justify-content: center ;
     align-items: center;
     gap: 70px;
+    text-align: center;
 }
 
 .get-started-btn{
@@ -49,10 +50,6 @@
     background-color: rgb(220, 208, 195, 0.2);
   }
   
-.about-container{
-    text-align: center;
-}
-
 /* button animation */
 .get-started-btn::before {
     content: '';
@@ -98,4 +95,8 @@
     font-size: 15px;
     font-weight: bold;
     padding-bottom: 10px;
+}
+
+.inquiry-form{
+
 }
