--- a/frontend/src/components/inputField/index.css
+++ b/frontend/src/components/inputField/index.css
@@ -1,14 +1,16 @@
 .input-field{
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     padding:10px;
-    border: solid 2px;
-    border-radius: 8px;
     width: 400px;
-    margin: 10px;
+    border: none;
+    outline: none;
 }
-
+.input-field-label{
+    padding-left: 10px;
+}
 .error{
     color: red;
     margin-left: 14px;
     font-size: 10px;
 }
+
