--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -80,7 +80,7 @@
     gap: 20px;
   }
 .cards-container{
-    gap: 15px;
+    gap: 31px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -96,7 +96,34 @@
     font-weight: bold;
     padding-bottom: 10px;
 }
-
+.inquiry-form-container{
+    height: 90vh;
+    padding-top: 40px;
+    align-items: center;
+    gap: 20px;
+}
 .inquiry-form{
+    padding: 20px;
+    border-radius: 25px;
+    width: 80%;
+    gap: 20px;
+}
+.contact-us-title{
+    font-size: 22px;
+    font-weight: bold;
+}
+.form-row{
+    gap: 20px;
+    justify-content: space-around;
+}
 
+.text-area-label{
+    padding-left: 20px ;
+}
+.text-area{
+    padding: 10px;
+    margin: 0 10px;
+    border: none;
+    resize: none;
+    outline: none;
 }
