--- a/frontend/src/components/inputField/index.css
+++ b/frontend/src/components/inputField/index.css
@@ -1,9 +1,10 @@
 .input-field{
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     padding:10px;
-    width: 400px;
+    max-width: 400px;
     border: none;
     outline: none;
+    width: 400px;
 }
 .input-field-label{
     padding-left: 10px;
@@ -14,3 +15,7 @@
     font-size: 10px;
 }
 
+/* .input-container{
+    width:50%;
+    margin: 0 10px;
+} */
