--- a/frontend/src/pages/landing/index.css
+++ b/frontend/src/pages/landing/index.css
@@ -97,13 +97,14 @@
     padding-bottom: 10px;
 }
 .inquiry-form-container{
-    height: 90vh;
+    height: auto;
     padding-top: 40px;
+    padding-bottom: 40px;
     align-items: center;
     gap: 20px;
 }
 .inquiry-form{
-    padding: 20px;
+    padding: 40px 40px;
     border-radius: 25px;
     width: 80%;
     gap: 20px;
@@ -115,14 +116,14 @@
 .form-row{
     gap: 20px;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .text-area-label{
-    padding-left: 20px ;
+    padding-left: 10px ;
 }
 .text-area{
     padding: 10px;
-    margin: 0 10px;
     border: none;
     resize: none;
     outline: none;
@@ -133,5 +134,5 @@
     width: 80px;
     border-radius: 50px;
     align-self: flex-end;
-    margin-right: 10px;
+    cursor: pointer;
 }
