--- a/frontend/src/pages/login/index.css
+++ b/frontend/src/pages/login/index.css
@@ -26,6 +26,8 @@
     padding: 10px;
     margin-top: 10px ;
     cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
 }
 .signup-btn{
     cursor: pointer;
