frontend <> deleted login form btn css

--- a/frontend/src/pages/login/index.css
+++ b/frontend/src/pages/login/index.css
@@ -18,7 +18,7 @@
     font-weight: bold;
 }
 
-.login-btn{
+/* .login-btn{
     width: 100%;
     align-self: center;
     border: none;
@@ -32,4 +32,4 @@
 .signup-btn{
     cursor: pointer;
     font-weight: bold;
-}
+} */
