--- a/frontend/src/components/about/index.css
+++ b/frontend/src/components/about/index.css
@@ -8,10 +8,11 @@
     align-items: center;
     gap: 70px;
     text-align: center;
+    padding-top: 10%;
 }
 
 .get-started-btn{
-    width: 50vw;
+    width: 25vw;
     height: 10vh;
     border-radius: 50px;
     cursor: pointer;
