--- a/frontend/src/components/option/index.css
+++ b/frontend/src/components/option/index.css
@@ -2,18 +2,33 @@
     align-items: center;
     width: 50vw;
     padding: 40px 0px;
+    gap: 54px;
 }
 
 .paragraphs{
     width: 80%;
+    gap:20px;
+    align-items: center;
 }
 .option-paragraph{
-   
     word-wrap: break-word;
     text-align: center;
+    line-height: 1.5;
+    font-size: 18px;
+    
 }
 
 .option-title{
-    font-size: 22px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.option-btn{
+    border: none;
+    padding: 20px;
+    border-radius: 50px;
+    width: 50%;
+    font-size: 12px;
+    cursor: pointer;
     font-weight: bold;
 }
