--- a/frontend/src/components/nav/index.css
+++ b/frontend/src/components/nav/index.css
@@ -6,7 +6,7 @@
 .nav{
     justify-content: space-between;
     align-items: center;
-    border-bottom: 5px solid #333;
+    /* border-bottom: 5px solid #333; */
 }
 
 .gap{
