--- a/frontend/src/components/about/index.css
+++ b/frontend/src/components/about/index.css
@@ -1,5 +1,5 @@
 .about-container{
-    height: 85vh;
+    height: auto;
     background-image: url("../../assets/images/landing-page2.webp");
     background-position:center top;
     background-repeat: no-repeat;
@@ -8,16 +8,15 @@
     align-items: center;
     gap: 70px;
     text-align: center;
-    padding-top: 10%;
+    padding-top: 15%;
+    padding-bottom: 5%;
 }
 
 .get-started-btn{
     width: 25vw;
-    height: 10vh;
+    height: 60px;
     border-radius: 50px;
     cursor: pointer;
-    position: relative;
-    overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease-in-out;
     border:none;
     font-size: 25px;
@@ -33,7 +32,7 @@
     position: relative;
     z-index: 1;
     line-height: 1.5;
-    padding: 10px;
+    padding: 10px 90px;
     font-size: 22px;
     width: 100%;
     height: 100%;
@@ -43,8 +42,8 @@
   .blur-background {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 8%;
+    width: 85%;
     height: 100%;
     z-index: 0;
     backdrop-filter: blur(10px); 
