--- a/frontend/src/pages/login/index.css
+++ b/frontend/src/pages/login/index.css
@@ -1,8 +1,7 @@
 .login-container{
     height: auto;
-    padding-top:56px;
-    padding-bottom: 56px;
     justify-content: space-between;
+    padding: 56px 170px;
 }
 
 .login-form{
