--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+body{
+    font-family: 'Kavoon' !important;
+}
+::placeholder {
+    font-family: 'Kavoon', monospace;
+  }
 .flex{
     display: flex;
 }
@@ -43,4 +48,8 @@
 .secondary-color-border{
     border-top: 2px solid #333333;
     border-bottom: 2px solid #333333 ;
+}
+
+button{
+    font: inherit;
 }
