--- a/frontend/src/components/popup/index.css
+++ b/frontend/src/components/popup/index.css
@@ -26,11 +26,9 @@
     left: 10px;
     cursor: pointer;
 }
-
-.host-btn{
-    margin-top: 30px;
+.or{
+    align-self: center;
 }
-
 .popup-btn{
     padding: 10px 0;
     border-radius: 50px;
