frontend <> edited time travel page css

--- a/frontend/src/pages/timeTravelMenu/index.css
+++ b/frontend/src/pages/timeTravelMenu/index.css
@@ -3,3 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.time-travel{
+    gap: 25px;
+    align-items: center;
+    padding: 56px 70px;
+}
