--- a/frontend/src/components/inputField/index.css
+++ b/frontend/src/components/inputField/index.css
@@ -9,7 +9,7 @@
     padding-left: 10px;
 }
 .error{
-    color: red;
+    color: rgb(242, 69, 69);
     padding-left: 10px;
     font-size: 10px;
 }
