frontend <> added error/success message to inquiry form

--- a/frontend/src/components/inquiry/index.css
+++ b/frontend/src/components/inquiry/index.css
@@ -43,3 +43,16 @@
     cursor: pointer;
     border: none;
 }
+
+.status{
+    align-self: center;
+    font-size: 15px;
+}
+
+.success {
+    color: green;
+}
+
+.failed {
+    color :rgb(242, 69, 69);
+}
