--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+html,body,#root{
+    width: 100%;
+    height: 100%;
+}
 body{
     font-family: 'Kavoon' !important;
 }
