--- a/frontend/src/pages/register/index.css
+++ b/frontend/src/pages/register/index.css
@@ -1,6 +1,7 @@
 .signup-container{
     height: auto;
     justify-content: space-between;
+    align-items: center;
     padding: 56px 170px;
     flex-wrap: wrap;
     gap: 10px;
