--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,3 +57,13 @@ body{
 button{
     font: inherit;
 }
+
+.exit-btn{
+    position:fixed;
+    bottom: 5px;
+    right: 2px;
+    padding: 20px;
+    border-radius: 50px;
+    width: 25vw;
+    cursor: pointer;
+}
