--- a/frontend/src/components/messagebox/index.css
+++ b/frontend/src/components/messagebox/index.css
@@ -24,7 +24,7 @@
 .messages{
     flex-direction: column;
     min-height: 300px;
-    height: 60vh;
+    height: 66vh;
     overflow-y: auto;
     gap: 10px;
 }
@@ -39,7 +39,7 @@
 }
 
 .send{
-    padding: 15px;
+    padding: 10px 15px;
     border-radius: 50px;
     border: none;
     cursor: pointer;
