frontend <> created lock button to lock the mouse pointer

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,3 +67,14 @@ button{
     width: 25vw;
     cursor: pointer;
 }
+.lock-btn{
+    position:fixed;
+    bottom:5px;
+    right: 50vw;
+    padding: 10px;
+    border-radius: 50px;
+    width: 10vw;
+    cursor: pointer;
+    border: none;
+    opacity: 0.3;
+}
