--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -78,3 +78,22 @@ button{
     border: none;
     opacity: 0.3;
 }
+
+.down-arrow{
+    width: 40px;
+    height: 50px;
+    position: fixed;
+    bottom: 5px;
+    right: 50vw;
+    cursor: pointer;
+    opacity: 0.5;
+}
+.up-arrow{
+    width:40px;
+    height: 50px;
+    position: fixed;
+    top: 5px;
+    right: 50vw;
+    cursor: pointer;
+    opacity: 0.5;
+}
