--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -125,3 +125,10 @@ button{
     flex-direction: column;
     gap: 3px;
 }
+
+.lock-text{
+    position: fixed;
+    bottom: 45px;
+    right: 49.5vw;
+    opacity: 0.5;
+}
